# faker_persons_ru

./: CHANGES.md  LICENSE  README.md  pyproject.toml  requirements.txt
faker_persons_ru/: __init__.py  __version__.py  main.py
faker_persons_ru/data/: firstnames_junior_female.csv  firstnames_middle_male.csv  firstnames_senior_female.csv  lastnames_female.csv  patronymics_junior_female.csv
faker_persons_ru/modules/: __init__.py  datasets.py  demography.py  emails.py  names.py  outputs.py  phones.py
faker_persons_ru/sources/: firstnames_junior_male.csv  firstnames_middle_female.csv  firstnames_senior_male.csv  lastnames_male.csv  patronymics_junior_male.csv  patronymics_middle_female.csv  patronymics_middle_male.csv  patronymics_senior_female.csv  patronymics_senior_male.csv
src/faker_persons_ru/: __init__.py  __main__.py  __version__.py
src/faker_persons_ru/data/: __init__.py  first_names_j.py  first_names_m.py  first_names_s.py  firstnames_j.py  firstnames_m.py  firstnames_s.py  last_names_female.py  last_names_male.py  lastnames_female.py  lastnames_male.py  locations.py  names.py  patronymics_j.py  patronymics_m.py  patronymics_s.py  reader.py
src/faker_persons_ru/modules/: __init__.py  birthday.py  birthdays.py  datasets.py  demography.py  email.py  emails.py  outputs.py  phone.py  phones.py
