[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "faker_persons_ru"
version = "0.7.3"
authors = [
  { name="Anatoly Shcherbina", email="avshcherbina@gmail.com" },
]
description = "Python3 project to generate fake personal data (in Russian)."
readme = "README.md"
keywords = ["python3", "faker", "russian-language", "education", "development"]
requires-python = ">=3.9"
dependencies = [
  "click>=8.1.3",
  "pandas>=1.5.3"
]
classifiers = [
        "Development Status :: 3 - Alpha",
        "Environment :: Console",
        "Operating System :: OS Independent",
        "Intended Audience :: Education :: Developers :: Other Audience",
        "Topic :: Education :: Software Development :: Testing :: Localization",
        "License :: OSI Approved :: MIT License",
        "Programming Language :: Python :: 3",
        "Programming Language :: Python :: 3.9",
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: 3.11",
        "Natural Language :: Russian",
        "Topic :: Communications :: Email",
]
license = {file = "LICENSE"}

[project.urls]
"Homepage" = "https://github.com/nobus-1967/faker_persons_ru/"
"Сhangelog" = "https://github.com/nobus-1967/faker_persons_ru/CHANGES.md"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
namespaces = true
where = ["src"]
